--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,23 @@
 programs:
+
+    empty:
+
     cat:
+      cmd: "/bin/cat" #
+      numprocs: 3 #
+      umask: 022
+      workingdir: "/tmp" #
+      autostart: false #
+      autorestart: "unexpected" #
+      exitcodes: #
+        - 0
+        - 2
+      startretries: 3
+      starttime: 5
+      stopsignal: "TERM" #
+      stoptime: 10 #
+      stdout: "/tmp/taskcat.stdout" #
+      stderr: "/tmp/taskcat.stderr" #
 
     ls:
       cmd: "ls -R /Applications"
@@ -20,20 +38,15 @@ programs:
 
     wc:
       cmd: "/usr/bin/wc"
-      numprocs: 1
       umask: 077
-      workingdir: "/tmp"
       autostart: false
-      autorestart: "unexpected"
       exitcodes:
         - 0
         - 15
       startretries: 3
       starttime: 1
-      stopsignal: "USR1"
       stoptime: 10
       stdout: "/tmp/taskwc.stdout"
-      stderr: "/tmp/taskwc.stderr"
 
     fail:
       cmd: "/fail"
