--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,7 @@ programs:
         - 0
         - 2
       startretries: 3
-      starttime: 5
+      starttime: 5 #
       stopsignal: "TERM" #
       stoptime: 10 #
       stdout: "/tmp/taskcat.stdout" #
