--- a/Le_S/config.yaml
+++ b/Le_S/config.yaml
@@ -3,45 +3,28 @@ programs:
     empty:
 
     cat:
-      cmd: "/bin/cat"
-      numprocs: 1
+      cmd: "/bin/cat" #
+      numprocs: 5 #
       umask: 022
-      workingdir: "/tmp"
-      autostart: false
-      autorestart: "unexpected"
-      exitcodes:
+      workingdir: "/tmp" #
+      autostart: false #
+      autorestart: "unexpected" #
+      exitcodes: #
         - 0
         - 2
-      startretries: 3
-      starttime: 1
-      stopsignal: "TERM"
-      stoptime: 10
-      stdout: "/tmp/taskcat.stdout"
-      stderr: "/tmp/taskcat.stderr"
-
-    new:
-      cmd: "/bin/cat . -"
-      numprocs: 1
-      umask: 022
-      workingdir: "/tmp"
-      autostart: false
-      autorestart: "unexpected"
-      exitcodes:
-        - 0
-        - 2
-      startretries: 3
-      starttime: 1
-      stopsignal: "TERM"
-      stoptime: 10
-      stdout: "/tmp/taskcat.stdout"
-      stderr: "/tmp/taskcat.stderr"
+      startretries: 3 #
+      starttime: 5 #
+      stopsignal: "TERM" #
+      stoptime: 10 #
+      stdout: "/tmp/taskcat.stdout" #
+      stderr: "/tmp/taskcat.stderr" #
 
     ls:
       cmd: "ls -R /Applications"
       numprocs: 1
       umask: 077
       workingdir: "/tmp"
-      autostart: false
+      autostart: 4
       autorestart: "unexpected"
       exitcodes:
         - 0
@@ -61,6 +44,7 @@ programs:
         - 0
         - 15
       startretries: 3
+      stopsignal: 15
       starttime: 1
       stoptime: 10
       stdout: "/tmp/taskwc.stdout"
