--- a/config.yaml
+++ b/config.yaml
@@ -4,14 +4,16 @@ programs:
 
     cat:
       cmd: "/bin/cat" #
-      numprocs: 5 #
-      umask: 022
+      numprocs: 4 #
+      umask: 644 #
       workingdir: "/tmp" #
       autostart: false #
       autorestart: "unexpected" #
       exitcodes: #
         - 0
         - 2
+        - 15
+        - 9
       startretries: 3 #
       starttime: 5 #
       stopsignal: "TERM" #
@@ -24,14 +26,14 @@ programs:
       numprocs: 1
       umask: 077
       workingdir: "/tmp"
-      autostart: 4
+      autostart: false
       autorestart: "unexpected"
       exitcodes:
         - 0
         - 2
       startretries: 3
       starttime: 1
-      stopsignal: "USR1"
+      stopsignal: "TERM"
       stoptime: 10
       stdout: "/tmp/taskls.stdout"
       stderr: "/tmp/taskls.stderr"
@@ -63,5 +65,5 @@ programs:
       starttime: 2
       stopsignal: "USR1"
       stoptime: 10
-      stdout: "/tmp/taskwc.stdout"
-      stderr: "/tmp/taskwc.stderr"
+      stdout: "/tmp/taskFAIL.stdout"
+      stderr: "/tmp/taskFAIL.stderr"
